[gd_scene load_steps=26 format=3 uid="uid://b8ey1tlpi6jpq"]

[ext_resource type="Texture2D" uid="uid://bfmyuhppk102w" path="res://Assets/Art/Titles.png" id="1_ng8d5"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_qvj1s"]
[ext_resource type="Texture2D" uid="uid://cigiw5kjgttho" path="res://Assets/Art/Environment.png" id="1_u4e8e"]
[ext_resource type="Texture2D" uid="uid://nra2p7ynw8dc" path="res://Assets/Art/bricks.png" id="2_kbm6q"]
[ext_resource type="Texture2D" uid="uid://dww6c367uddmo" path="res://Assets/Art/UI Buttons/play_normal.png" id="2_vv7fy"]
[ext_resource type="Texture2D" uid="uid://0v1bnl5rcnlb" path="res://Assets/Art/UI Buttons/play_pressed.png" id="3_jk40b"]
[ext_resource type="Texture2D" uid="uid://naujco7ho1nv" path="res://Assets/Art/UI Buttons/play_hover.png" id="4_hanqu"]
[ext_resource type="FontFile" uid="uid://bgjbj7oq2nv44" path="res://Assets/SCG_FONT.ttf" id="5_tf87q"]
[ext_resource type="Texture2D" uid="uid://bm30e6ek2g8iy" path="res://Assets/Art/UI Buttons/achieve_normal.png" id="6_0ak2s"]
[ext_resource type="Texture2D" uid="uid://cjpio0gp5qta0" path="res://Assets/Art/UI Buttons/achieve_pressed.png" id="7_4k6bm"]
[ext_resource type="Texture2D" uid="uid://b37ydv2scok0k" path="res://Assets/Art/UI Buttons/achieve_hover.png" id="8_ekh0l"]
[ext_resource type="Texture2D" uid="uid://cs85o6piphntf" path="res://Assets/Art/UI Buttons/howTo_normal.png" id="9_gsei0"]
[ext_resource type="Texture2D" uid="uid://d1ju4dxp1bmdw" path="res://Assets/Art/UI Buttons/howTo_pressed.png" id="10_d0lak"]
[ext_resource type="Texture2D" uid="uid://dv84x8yohj2x" path="res://Assets/Art/UI Buttons/howTo_hover.png" id="11_3irhc"]
[ext_resource type="Texture2D" uid="uid://dg0o4urnoqh86" path="res://Assets/Art/UI Buttons/settings_normal.png" id="12_25hx5"]
[ext_resource type="Texture2D" uid="uid://dcy8upw687ajy" path="res://Assets/Art/UI Buttons/settings_pressed.png" id="13_l8mby"]
[ext_resource type="Texture2D" uid="uid://ct7wk73rymdg4" path="res://Assets/Art/UI Buttons/settings_hover.png" id="14_v05p7"]
[ext_resource type="Texture2D" uid="uid://c522rv3s7o46j" path="res://Assets/Art/UI Buttons/credits_normal.png" id="15_6kkew"]
[ext_resource type="Texture2D" uid="uid://dxdea6anev0wx" path="res://Assets/Art/UI Buttons/credits_pressed.png" id="16_b73mv"]
[ext_resource type="Texture2D" uid="uid://ckawhrj3jj75c" path="res://Assets/Art/UI Buttons/credits_hover.png" id="17_dmav6"]
[ext_resource type="Texture2D" uid="uid://bfa5bbpxq1kre" path="res://Assets/Art/Blob_Sprites.png" id="19_ruxbj"]
[ext_resource type="Texture2D" uid="uid://vr46yilgcau" path="res://Assets/Art/Road.png" id="19_sd2s4"]
[ext_resource type="Texture2D" uid="uid://cw57qeja5lbci" path="res://Assets/Art/Sprite_Sprites.png" id="20_u881l"]
[ext_resource type="Texture2D" uid="uid://bdg5gjjvreutl" path="res://Assets/Art/Attacks.png" id="21_oqule"]
[ext_resource type="Texture2D" uid="uid://0egcbm85cirq" path="res://Assets/Art/Arrows.png" id="22_ot7ye"]

[node name="MainMenu" type="Node2D"]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_qvj1s")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 339.0
offset_bottom = 339.0
texture = ExtResource("2_kbm6q")
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_right = 355.0
offset_bottom = 356.0
color = Color(0, 0, 0, 0.643137)

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(140, 28)
scale = Vector2(2, 2)
texture = ExtResource("1_ng8d5")
vframes = 4

[node name="Sub-title" type="Sprite2D" parent="Title"]
position = Vector2(7, 18)
texture = ExtResource("1_ng8d5")
hframes = 2
vframes = 4
frame = 4

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 16.0
offset_top = 80.0
offset_right = 32.0
offset_bottom = 176.0
scale = Vector2(2, 2)
metadata/_edit_group_ = true

[node name="btn_Play" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_vv7fy")
texture_pressed = ExtResource("3_jk40b")
texture_hover = ExtResource("4_hanqu")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/btn_Play"]
layout_mode = 0
offset_left = 20.0
offset_top = 2.0
offset_right = 820.0
offset_bottom = 162.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("5_tf87q")
theme_override_font_sizes/normal_font_size = 96
text = "Play"

[node name="btn_Achieve" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_0ak2s")
texture_pressed = ExtResource("7_4k6bm")
texture_hover = ExtResource("8_ekh0l")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/btn_Achieve"]
layout_mode = 0
offset_left = 20.0
offset_top = 2.0
offset_right = 820.0
offset_bottom = 162.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("5_tf87q")
theme_override_font_sizes/normal_font_size = 96
text = "Achievements"

[node name="btn_HowTo" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("9_gsei0")
texture_pressed = ExtResource("10_d0lak")
texture_hover = ExtResource("11_3irhc")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/btn_HowTo"]
layout_mode = 0
offset_left = 20.0
offset_top = 2.0
offset_right = 820.0
offset_bottom = 162.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("5_tf87q")
theme_override_font_sizes/normal_font_size = 96
text = "How To"

[node name="btn_Settings" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("12_25hx5")
texture_pressed = ExtResource("13_l8mby")
texture_hover = ExtResource("14_v05p7")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/btn_Settings"]
layout_mode = 0
offset_left = 20.0
offset_top = 2.0
offset_right = 820.0
offset_bottom = 162.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("5_tf87q")
theme_override_font_sizes/normal_font_size = 96
text = "Settings"

[node name="btn_Credits" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("15_6kkew")
texture_pressed = ExtResource("16_b73mv")
texture_hover = ExtResource("17_dmav6")

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/btn_Credits"]
layout_mode = 0
offset_left = 20.0
offset_top = 2.0
offset_right = 820.0
offset_bottom = 162.0
scale = Vector2(0.1, 0.1)
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("5_tf87q")
theme_override_font_sizes/normal_font_size = 96
text = "Credits"

[node name="FightScene" type="Node2D" parent="."]
position = Vector2(224, 228)
scale = Vector2(1.5, 1.5)

[node name="road" type="TextureRect" parent="FightScene"]
offset_left = -151.111
offset_top = 42.6667
offset_right = 42.8889
offset_bottom = 58.6667
texture = ExtResource("19_sd2s4")
stretch_mode = 1

[node name="road2" type="TextureRect" parent="FightScene"]
offset_left = 63.0
offset_top = -161.0
offset_right = 284.0
offset_bottom = -145.0
rotation = 1.5708
texture = ExtResource("19_sd2s4")
stretch_mode = 1

[node name="circle" type="Sprite2D" parent="FightScene"]
position = Vector2(55.1111, 49.7778)
texture = ExtResource("1_u4e8e")
hframes = 4
vframes = 3
frame = 3

[node name="sprite" type="Sprite2D" parent="FightScene"]
position = Vector2(-17.7778, -5.33334)
texture = ExtResource("20_u881l")
hframes = 6
vframes = 2
frame = 2

[node name="blob" type="Sprite2D" parent="FightScene"]
position = Vector2(54.2222, 48.8889)
texture = ExtResource("19_ruxbj")
flip_h = true
hframes = 8
vframes = 10
frame = 40

[node name="sword" type="Sprite2D" parent="FightScene"]
position = Vector2(44.4444, 31.7778)
texture = ExtResource("21_oqule")
flip_h = true
hframes = 7
vframes = 4
frame = 8

[node name="shield" type="Sprite2D" parent="FightScene"]
position = Vector2(40.8889, 48.8889)
rotation = 1.5708
texture = ExtResource("21_oqule")
flip_v = true
hframes = 7
vframes = 4
frame = 6

[node name="bullet" type="Sprite2D" parent="FightScene"]
position = Vector2(25.7778, 2.66666)
rotation = 0.733038
texture = ExtResource("22_ot7ye")
hframes = 2

[node name="bullet3" type="Sprite2D" parent="FightScene"]
position = Vector2(17.7778, 24)
rotation = 0.575959
texture = ExtResource("22_ot7ye")
hframes = 2

[node name="bullet2" type="Sprite2D" parent="FightScene"]
position = Vector2(24.8889, 49.7778)
rotation = 0.0959931
texture = ExtResource("22_ot7ye")
hframes = 2

[connection signal="pressed" from="VBoxContainer/btn_Play" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_Achieve" to="." method="_on_btn_achieve_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_HowTo" to="." method="_on_btn_how_to_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_Settings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_Credits" to="." method="_on_btn_credits_pressed"]
